--- a/app/src/main/res/layout/activity_add_saler.xml
+++ b/app/src/main/res/layout/activity_add_saler.xml
@@ -25,6 +25,7 @@
             android:textColor="#333333"
             android:textSize="16sp" />
 
+
     </RelativeLayout>
 
     <RelativeLayout
@@ -33,6 +34,7 @@
         android:background="#F5F5F5">
 
         <TextView
+            android:id="@+id/tv_acount_infor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
@@ -40,6 +42,16 @@
             android:text="账号信息"
             android:textColor="#333333"
             android:textSize="14sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@+id/tv_acount_infor"
+            android:layout_marginLeft="10dp"
+            android:text="必填"
+            android:textColor="#FF5755"
+            android:textSize="10sp" />
 
     </RelativeLayout>
 
@@ -104,6 +116,7 @@
         android:background="#F5F5F5">
 
         <TextView
+            android:id="@+id/tv_basic_infor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
@@ -111,6 +124,16 @@
             android:text="基本信息"
             android:textColor="#333333"
             android:textSize="14sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@+id/tv_basic_infor"
+            android:layout_marginLeft="10dp"
+            android:text="选填"
+            android:textColor="#333333"
+            android:textSize="10sp" />
 
     </RelativeLayout>
 
@@ -157,15 +180,16 @@
         android:layout_marginLeft="14dp"
         android:layout_marginRight="14dp"/>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/tv_name"
             android:layout_width="60dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_centerVertical="true"
             android:layout_marginLeft="14dp"
             android:text="姓名"
             android:textColor="#999999"
@@ -175,8 +199,9 @@
             android:id="@+id/et_sale_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:layout_marginLeft="14dp"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@+id/tv_name"
             android:hint="请输入销售姓名"
             android:background="@null"
             android:textColor="#333333"
@@ -184,16 +209,24 @@
 
         <TextView
             android:id="@+id/tv_address_book"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="right|center"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
             android:text="通讯录"
             android:textSize="12sp"
             android:textColor="#999999"
             android:layout_marginRight="14dp"/>
 
-    </LinearLayout>
+        <ImageView
+            android:layout_width="18dp"
+            android:layout_height="18dp"
+            android:src="@mipmap/contacts"
+            android:layout_toLeftOf="@+id/tv_address_book"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="2dp"/>
+
+    </RelativeLayout>
 
     <View
         android:layout_width="match_parent"
