--- a/app/src/main/res/layout/activity_inventory_manage.xml
+++ b/app/src/main/res/layout/activity_inventory_manage.xml
@@ -20,7 +20,7 @@
         android:layout_height="18dp"
         android:layout_marginLeft="14dp"
         android:layout_marginTop="16dp"
-        android:src="@mipmap/back"
+        android:src="@mipmap/icon_white_back"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
