--- a/app/src/main/res/layout/activity_modify_car.xml
+++ b/app/src/main/res/layout/activity_modify_car.xml
@@ -36,21 +36,23 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="120dp"
         android:orientation="horizontal"
         >
         
         <ImageView
+            android:id="@+id/iv_car_img"
             android:layout_width="88dp"
             android:layout_height="66dp"
             android:layout_margin="14dp"
-            android:gravity="center"/>
+            android:layout_gravity="center"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical">
             <TextView
+                android:id="@+id/tv_car_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="雪佛兰2013款 科鲁兹 1.6LSL天地板"
@@ -58,6 +60,7 @@
                 android:textColor="#333333"
                 android:textSize="14sp"/>
             <TextView
+                android:id="@id/tv_car_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="车源价  16.8万"
@@ -66,6 +69,7 @@
                 android:textSize="14sp"/>
 
             <TextView
+                android:id="@+id/tv_suggest_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="建议售价  20万"
@@ -99,14 +103,16 @@
             />
         
         <EditText
+            android:id="@+id/et_saleCarPrice"
             android:layout_width="86dp"
             android:layout_height="30dp"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
             android:background="@drawable/bg_edittext"
             android:hint="万"
-            android:gravity="right"
+            android:gravity="center|right"
             android:layout_marginRight="14dp"
+            android:textSize="12sp"
             android:paddingRight="20dp"/>
     </RelativeLayout>
 
@@ -136,13 +142,15 @@
             />
 
         <EditText
+            android:id="@+id/et_insuranceRebates"
             android:layout_width="86dp"
             android:layout_height="30dp"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
             android:background="@drawable/bg_edittext"
             android:hint="%"
-            android:gravity="right"
+            android:gravity="center|right"
+            android:textSize="12sp"
             android:layout_marginRight="14dp"
             android:paddingRight="20dp"/>
     </RelativeLayout>
@@ -173,6 +181,7 @@
             />
 
         <EditText
+            android:id="@+id/et_loanRebates"
             android:layout_width="86dp"
             android:layout_height="30dp"
             android:layout_centerVertical="true"
@@ -180,7 +189,8 @@
             android:background="@drawable/bg_edittext"
             android:layout_marginRight="14dp"
             android:hint="%"
-            android:gravity="right"
+            android:gravity="center|right"
+            android:textSize="12sp"
             android:paddingRight="20dp"/>
     </RelativeLayout>
 
