--- a/app/src/main/res/layout/activity_order_list.xml
+++ b/app/src/main/res/layout/activity_order_list.xml
@@ -20,10 +20,10 @@
         <EditText
             android:id="@+id/et_search"
             android:layout_width="match_parent"
-            android:layout_height="38dp"
+            android:layout_height="30dp"
             android:layout_marginBottom="8dp"
             android:layout_marginLeft="14dp"
-            android:layout_marginRight="14dp"
+            android:layout_marginRight="48dp"
             android:layout_centerVertical="true"
             android:background="#F2F2F2"
             android:drawableLeft="@mipmap/search"
@@ -33,6 +33,16 @@
             android:textColor="#999999"
             android:textSize="14dp"
             />
+
+        <TextView
+            android:id="@+id/tv_search"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="搜索"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:textSize="16sp"
+            android:layout_marginRight="12dp"/>
 
     </RelativeLayout>
     
