--- a/app/src/main/res/layout/activity_store_report.xml
+++ b/app/src/main/res/layout/activity_store_report.xml
@@ -216,6 +216,7 @@
                     android:textSize="14sp" />
 
                 <com.example.com.careasysell.view.ChartView
+                    android:id="@+id/chartview"
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
                     android:layout_margin="20dp" />
