--- a/app/src/main/res/layout/activity_user_manager.xml
+++ b/app/src/main/res/layout/activity_user_manager.xml
@@ -1,70 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="130dp"
-        android:orientation="vertical"
-        android:background="@mipmap/home_bg">
+        android:background="@mipmap/home_bg"
+        android:orientation="vertical">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp">
 
-        <ImageView
-            android:id="@+id/iv_back"
-            android:layout_width="18dp"
-            android:layout_height="18dp"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="16dp"
-            android:src="@mipmap/back" />
+            <ImageView
+                android:id="@+id/iv_back"
+                android:layout_width="18dp"
+                android:layout_height="18dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="16dp"
+                android:src="@mipmap/icon_white_back" />
 
-        <TextView
-            android:id="@+id/tv_title"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/tv_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="人员管理"
+                android:textColor="#FFFFFF"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/tv_add_saler"
+                android:layout_width="56dp"
+                android:layout_height="20dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="16dp"
+                android:text="添加销售"
+                android:textColor="#FFFFFF"
+                android:textSize="14dp" />
+
+        </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="人员管理"
-            android:textColor="#FFFFFF"
-            android:textSize="16sp" />
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tv_add_saler"
-            android:layout_width="56dp"
-            android:layout_height="20dp"
-            android:text="添加销售"
-            android:textSize="14dp"
-            android:textColor="#FFFFFF"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="16dp"/>
+            <EditText
+                android:id="@+id/et_queryKey"
+                android:layout_width="match_parent"
+                android:layout_height="38dp"
+                android:layout_margin="20dp"
+                android:layout_marginTop="64dp"
+                android:layout_weight="1"
+                android:background="@drawable/home_page_bg"
+                android:drawableLeft="@mipmap/icon_search"
+                android:hint="销售名称/电话"
+                android:textColorHint="#FFFFFF"
+                android:paddingLeft="20dp"
+                android:textColor="#FFFFFF"
+                android:textSize="14dp" />
 
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/tv_search"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginRight="12dp"
+                android:text="搜索"
+                android:textColor="#FFFFFF"
+                android:textSize="16sp" />
 
-    <EditText
-        android:id="@+id/et_queryKey"
-        android:layout_width="match_parent"
-        android:layout_height="38dp"
-        android:layout_margin="20dp"
-        android:layout_marginTop="64dp"
-        android:background="@drawable/home_page_bg"
-        android:drawableLeft="@mipmap/search"
-        android:paddingLeft="20dp"
-        android:hint="销售名称/电话"
-        android:textSize="14dp"
-        android:textColor="#FFFFFF"
-        />
+        </LinearLayout>
 
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rl_user_manager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </android.support.v7.widget.RecyclerView>
+        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
 
 
 </LinearLayout>
