--- a/app/src/main/res/layout/activity_choose_area.xml
+++ b/app/src/main/res/layout/activity_choose_area.xml
@@ -62,6 +62,7 @@
                 android:src="@mipmap/icon_location" />
 
             <TextView
+                android:id="@+id/tv_loaction"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
