--- a/app/src/main/res/layout/activity_nation_source.xml
+++ b/app/src/main/res/layout/activity_nation_source.xml
@@ -50,9 +50,17 @@
                 android:textSize="14sp" />
         </RelativeLayout>
 
+        <LinearLayout
+            android:id="@+id/lly_search"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@+id/layout_bar"
+            app:layout_goneMarginBottom="14dp">
         <EditText
             android:id="@+id/et_search"
             android:layout_width="match_parent"
+            android:layout_weight="1"
             android:layout_height="38dp"
             android:layout_marginBottom="8dp"
             android:layout_marginLeft="14dp"
@@ -63,16 +71,23 @@
             android:paddingLeft="20dp"
             android:textColor="#999999"
             android:textSize="14dp"
-            app:layout_constraintTop_toBottomOf="@+id/layout_bar"
-            app:layout_goneMarginBottom="14dp" />
+            />
 
+        <TextView
+            android:id="@+id/tv_search"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="搜索"
+            android:layout_marginRight="20dp"
+            android:textSize="16sp"/>
+        </LinearLayout>
 
         <RadioGroup
             android:id="@+id/ll_tab"
             android:layout_width="match_parent"
             android:layout_height="34dp"
             android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@+id/et_search">
+            app:layout_constraintTop_toBottomOf="@+id/lly_search">
 
             <com.cheeshou.cheeshou.view.DrawableCenterRadioButton
                 android:id="@+id/rb_car_state"
