--- a/app/src/main/res/layout/activity_market_search.xml
+++ b/app/src/main/res/layout/activity_market_search.xml
@@ -31,6 +31,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            android:id="@+id/tv_search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="14dp"
