--- a/app/src/main/res/layout/activity_store_manager_item_click.xml
+++ b/app/src/main/res/layout/activity_store_manager_item_click.xml
@@ -7,20 +7,29 @@
 
     <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tl="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.cheeshou.cheeshou.dealer.ui.activity.AllSourceSearchActivity">
+        android:background="#FFFFFF"
+        tools:context="com.cheeshou.cheeshou.dealer.ui.activity.StoreSearchActivity">
 
+
+        <TextView
+            android:id="@+id/tv_back"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_marginLeft="16dp"
+            android:background="@mipmap/back"
+            app:layout_constraintBaseline_toBaselineOf="@+id/tv_bar_right"
+            app:layout_constraintLeft_toLeftOf="parent" />
 
         <EditText
             android:id="@+id/et_search"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="38dp"
             android:layout_marginBottom="8dp"
             android:layout_marginLeft="14dp"
-            android:layout_marginRight="57dp"
+            android:layout_marginRight="14dp"
             android:layout_marginTop="8dp"
             android:background="#F2F2F2"
             android:drawableLeft="@mipmap/search"
@@ -28,56 +37,32 @@
             android:paddingLeft="20dp"
             android:textColor="#999999"
             android:textSize="14dp"
+            app:layout_constraintLeft_toRightOf="@+id/tv_back"
+            app:layout_constraintRight_toLeftOf="@+id/tv_bar_right"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/tv_search"
+            android:id="@+id/tv_bar_right"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="14dp"
+            android:layout_marginRight="16dp"
             android:text="取消"
             android:textColor="#999999"
             android:textSize="14sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/et_search"
-            app:layout_constraintLeft_toRightOf="@id/et_search" />
+            app:layout_constraintRight_toRightOf="parent" />
 
-
-        <com.flyco.tablayout.SlidingTabLayout
-            android:id="@+id/tab_search_result"
+        <FrameLayout
+            android:id="@+id/fm_fg_container"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="0dp"
             android:layout_marginTop="8dp"
-            android:background="#FFFFFF"
-            app:layout_constraintTop_toBottomOf="@+id/et_search"
-            app:tl_indicator_width_equal_title="true"
-            app:tl_tab_space_equal="true"
-            app:tl_textSelectColor="@color/color_FF5754"
-            app:tl_textUnselectColor="@color/color_333333" />
-
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#F5F5F5"
-            app:layout_constraintTop_toBottomOf="@id/tab_search_result" />
-
-        <android.support.v4.view.ViewPager
-            android:id="@+id/vp_content"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="1dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tab_search_result" />
+            app:layout_constraintTop_toBottomOf="@id/et_search"></FrameLayout>
 
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler_search_history"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:background="#F5F5F5"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tab_search_result" />
     </android.support.constraint.ConstraintLayout>
+
 
     <LinearLayout
         android:id="@+id/layout_drawer_right"
@@ -251,7 +236,7 @@
                         android:layout_centerVertical="true"
                         android:layout_marginRight="10dp"
                         android:layout_toLeftOf="@+id/ll_choose_year"
-                        android:background="@drawable/bg_edittext"
+                        android:background="@drawable/bg_radiobutton"
                         android:gravity="center"
                         android:text="不限" />
 
@@ -262,7 +247,7 @@
                         android:layout_height="32dp"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
-                        android:background="@drawable/bg_edittext"
+                        android:background="@drawable/bg_radiobutton"
                         android:orientation="horizontal">
 
                         <ImageView
@@ -319,7 +304,7 @@
                     <EditText
                         android:layout_width="80dp"
                         android:layout_height="30dp"
-                        android:background="@drawable/bg_edit_text_selector"
+                        android:background="@drawable/bg_radiobutton_selector"
                         android:gravity="center"
                         android:hint="最低价"
                         android:inputType="number"
@@ -336,7 +321,7 @@
                     <EditText
                         android:layout_width="80dp"
                         android:layout_height="30dp"
-                        android:background="@drawable/bg_edit_text_selector"
+                        android:background="@drawable/bg_radiobutton_selector"
                         android:gravity="center"
                         android:hint="最高价"
                         android:inputType="number"
@@ -345,7 +330,7 @@
                     <TextView
                         android:layout_width="20dp"
                         android:layout_height="30dp"
-                        android:layout_marginLeft="14dp"
+                        android:layout_marginLeft="10dp"
                         android:gravity="center"
                         android:text="万"
                         android:textColor="#333333"
@@ -485,7 +470,7 @@
                 android:layout_width="131dp"
                 android:layout_height="40dp"
                 android:layout_marginRight="10dp"
-                android:background="@drawable/bg_edittext"
+                android:background="@drawable/bg_radiobutton"
                 android:text="重置" />
 
             <Button
