--- a/app/src/main/res/layout/item_drawer_filter_racter.xml
+++ b/app/src/main/res/layout/item_drawer_filter_racter.xml
@@ -3,10 +3,10 @@
     android:layout_width="84dp"
     android:layout_height="30dp"
     android:layout_marginRight="10dp"
-    android:textSize="12sp"
     android:layout_marginTop="10dp"
-    android:background="@drawable/bg_edit_text_selector"
+    android:background="@drawable/bg_radiobutton_selector"
     android:gravity="center"
-    android:text="@string/app_name">
+    android:text="@string/app_name"
+    android:textSize="12sp">
 
 </TextView>
