--- a/app/src/main/res/layout/item_drawer_filter_source_type.xml
+++ b/app/src/main/res/layout/item_drawer_filter_source_type.xml
@@ -4,9 +4,9 @@
     android:layout_height="30dp"
     android:layout_marginRight="10dp"
     android:layout_marginTop="10dp"
-    android:background="@drawable/bg_edit_text_selector"
+    android:background="@drawable/bg_radiobutton_selector"
     android:gravity="center"
-    android:textSize="12sp"
-    android:text="@string/app_name">
+    android:text="@string/app_name"
+    android:textSize="12sp">
 
 </TextView>
