--- a/app/src/main/res/layout/activity_market_search.xml
+++ b/app/src/main/res/layout/activity_market_search.xml
@@ -25,7 +25,7 @@
             android:background="#F2F2F2"
             android:drawableLeft="@mipmap/search"
             android:paddingLeft="20dp"
-            android:text="车牌型号/VIN号/车辆编号"
+            android:hint="车牌型号/VIN号/车辆编号"
             android:textColor="#999999"
             android:textSize="14dp"
             app:layout_constraintTop_toTopOf="parent" />
