--- a/app/src/main/res/layout/fragment_dealer_traders.xml
+++ b/app/src/main/res/layout/fragment_dealer_traders.xml
@@ -11,6 +11,7 @@
         android:src="@mipmap/home_bg" />
 
     <TextView
+        android:id="@+id/tv_company"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
