--- a/app/src/main/res/layout/activity_car_detail.xml
+++ b/app/src/main/res/layout/activity_car_detail.xml
@@ -170,6 +170,34 @@
                     android:textSize="12sp" />
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/lly_rebates"
+                android:layout_width="match_parent"
+                android:layout_height="24dp"
+                android:layout_marginLeft="14dp"
+                android:layout_marginRight="14dp"
+                android:background="#F5F5F5"
+                android:orientation="horizontal"
+                >
+
+                <View
+                    android:layout_width="2dp"
+                    android:layout_height="match_parent"
+                    android:background="#999999"
+                    android:layout_margin="@dimen/dimens_5dp"
+                    />
+
+                <TextView
+                    android:id="@+id/tv_rebates"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="12dp"
+                    android:text="保险返点"
+                    android:layout_gravity="center"
+                    android:textColor="#333333"
+                    android:textSize="12sp" />
+            </LinearLayout>
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
