--- a/app/src/main/res/layout/activity_release_options.xml
+++ b/app/src/main/res/layout/activity_release_options.xml
@@ -113,6 +113,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="14sp"
+                        android:gravity="right"
                         android:layout_toLeftOf="@+id/iv_car_model"
                         android:layout_toRightOf="@+id/tv_carxing"
                         android:layout_centerVertical="true"/>
