--- a/app/src/main/res/layout/activity_store_manager_item_click.xml
+++ b/app/src/main/res/layout/activity_store_manager_item_click.xml
@@ -61,6 +61,15 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/et_search"></FrameLayout>
 
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_search_history"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="8dp"
+            android:background="#F5F5F5"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/et_search" />
+
     </android.support.constraint.ConstraintLayout>
 
 
