--- a/app/src/main/res/layout/activity_nation_source.xml
+++ b/app/src/main/res/layout/activity_nation_source.xml
@@ -57,29 +57,29 @@
             android:orientation="horizontal"
             app:layout_constraintTop_toBottomOf="@+id/layout_bar"
             app:layout_goneMarginBottom="14dp">
-        <EditText
-            android:id="@+id/et_search"
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:layout_height="38dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="14dp"
-            android:layout_marginRight="14dp"
-            android:background="#F2F2F2"
-            android:drawableLeft="@mipmap/search"
-            android:hint="`车牌型号/VIN号/车辆编号"
-            android:paddingLeft="20dp"
-            android:textColor="#999999"
-            android:textSize="14dp"
-            />
 
-        <TextView
-            android:id="@+id/tv_search"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="搜索"
-            android:layout_marginRight="20dp"
-            android:textSize="16sp"/>
+            <EditText
+                android:id="@+id/et_search"
+                android:layout_width="match_parent"
+                android:layout_height="38dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="14dp"
+                android:layout_marginRight="14dp"
+                android:layout_weight="1"
+                android:background="#F2F2F2"
+                android:drawableLeft="@mipmap/search"
+                android:hint="`车牌型号/VIN号/车辆编号"
+                android:paddingLeft="20dp"
+                android:textColor="#999999"
+                android:textSize="14dp" />
+
+            <TextView
+                android:id="@+id/tv_search"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="20dp"
+                android:text="搜索"
+                android:textSize="16sp" />
         </LinearLayout>
 
         <RadioGroup
@@ -351,7 +351,7 @@
                         android:layout_centerVertical="true"
                         android:layout_marginRight="10dp"
                         android:layout_toLeftOf="@+id/ll_choose_year"
-                        android:background="@drawable/bg_edittext"
+                        android:background="@drawable/bg_radiobutton"
                         android:gravity="center"
                         android:text="不限" />
 
@@ -362,7 +362,7 @@
                         android:layout_height="32dp"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
-                        android:background="@drawable/bg_edittext"
+                        android:background="@drawable/bg_radiobutton"
                         android:orientation="horizontal">
 
                         <ImageView
@@ -419,24 +419,35 @@
                     <EditText
                         android:layout_width="80dp"
                         android:layout_height="30dp"
-                        android:background="@drawable/bg_edit_text_selector"
+                        android:background="@drawable/bg_radiobutton_selector"
                         android:gravity="center"
                         android:hint="最低价"
                         android:inputType="number"
                         android:textSize="12sp" />
 
-                    <ImageView
+                    <TextView
                         android:layout_width="20dp"
-                        android:layout_height="30dp" />
+                        android:layout_height="30dp"
+                        android:text="~"
+                        android:textColor="#333333"
+                        android:textSize="14sp" />
 
                     <EditText
                         android:layout_width="80dp"
                         android:layout_height="30dp"
-                        android:background="@drawable/bg_edit_text_selector"
+                        android:background="@drawable/bg_radiobutton_selector"
                         android:gravity="center"
                         android:hint="最高价"
                         android:inputType="number"
                         android:textSize="12sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="30dp"
+                        android:layout_marginLeft="14dp"
+                        android:text="万"
+                        android:textColor="#333333"
+                        android:textSize="14sp" />
 
                 </LinearLayout>
 
@@ -572,7 +583,7 @@
                 android:layout_width="131dp"
                 android:layout_height="40dp"
                 android:layout_marginRight="10dp"
-                android:background="@drawable/bg_edittext"
+                android:background="@drawable/bg_radiobutton"
                 android:text="重置" />
 
             <Button
